--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <title>Redux boilerplate</title>
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Space+Mono|Oleo+Script+Swash+Caps" rel="stylesheet">
+    <title>Le Wagon Cities - React/Redux </title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="container">
+      <div class="header">
+        <h1>Le wagon Cities</h1>
+        <hr class="sep">
+      </div>
+    </div>
+    <div id="app"></div>
   </body>
 </html>
